refactor(api): delete /api
